--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mycompany</groupId>
-    <artifactId>EjemploMavenPrimeFaces</artifactId>
+    <artifactId>39SantoAngel</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>EjemploMavenPrimeFaces</name>
+    <name>39SantoAngel</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -26,7 +26,11 @@
             <artifactId>primefaces</artifactId>
             <version>6.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.glxn</groupId>
+            <artifactId>qrgen</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
