--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/alta.xhtml</welcome-file>
+        <welcome-file>faces/Principal.xhtml</welcome-file>
     </welcome-file-list>
     
 </web-app>
